--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.36.0",
+    "react-typed": "^1.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
