--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http:hemantkumar101010.github.io/react-portfolio-project",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/jest-dom": "^5.14.1",
