--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
+    "react-popupbox": "^2.0.8",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.36.0",
     "react-typed": "^1.2.0",
