--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.13.1",
+    "react-instagram-embed": "^3.0.0",
     "react-particles-js": "^3.5.3",
     "react-popupbox": "^2.0.8",
     "react-responsive-carousel": "^3.2.22",
     "react-scripts": "4.0.3",
+    "react-share": "^4.3.1",
     "react-tsparticles": "^1.36.0",
     "react-typed": "^1.2.0",
     "web-vitals": "^1.1.2"
