--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "http:hemantkumar101010.github.io/react-portfolio-project",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http:hemantkumar101010.github.io/react-portfolio-project",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.3",
     "emailjs": "^3.4.0",
     "emailjs-com": "^2.6.4",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.13.1",
