--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hemantkumar101010.github.io/react-portfolio-project/",
+  "homepage": "https://hemantkumar101010.github.io/react-portfolio-project",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +23,7 @@
     "react-popupbox": "^2.0.8",
     "react-responsive-carousel": "^3.2.22",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.1",
     "react-share": "^4.3.1",
     "react-tsparticles": "^1.36.0",
     "react-typed": "^1.2.0",
